--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -55,6 +55,19 @@ h1 {
   border-radius: 0;
 }
 
+.nav-pills .nav-link.active, .show>.nav-pills .nav-link {
+  color: rgba(0,0,0,.85);
+  background-color: unset;
+}
+
+.sidebar .nav-link {
+  color: rgba(0,0,0,.65);
+}
+
+.sidebar .nav-link:hover {
+  color: rgba(0,0,0,.85);
+}
+
 /*
  * Dashboard
  */
