--- a/assets/css/bes.css
+++ b/assets/css/bes.css
@@ -237,8 +237,16 @@
   }
 }
 
-@media (max-width: 992px) {
-  /*.sidebar {
-    top: 85px;
-  }*/
+#subjects a {
+	color: #2C2C2C;
+}
+
+#subjects .card {
+	min-height: 282px;
+	height: 92%;
+}
+
+#subjects h1 {
+	margin-top: 42px;
+	margin-bottom: 32px;
 }
