--- a/assets/css/bes.css
+++ b/assets/css/bes.css
@@ -251,7 +251,16 @@
 	margin-bottom: 32px;
 }
 
+.section-subjects h3 {
+	margin-top: 30px;
+}
+
 .section-search-result,
 .section-subjects {
 	min-height: 40vh;
+}
+
+#subjects ol li,
+#subjects ul li {
+	font-size: 1.3em;
 }
