--- a/assets/css/bes.css
+++ b/assets/css/bes.css
@@ -26,6 +26,12 @@
 	justify-content: center;
 }
 
+.search-form input {
+	background-color: rgba(0, 0, 0, 0.2);
+	color: #ffffff;
+	font-size: 16px;
+}
+
 .search-result a:hover {
   text-decoration: none;
 }
@@ -49,6 +55,10 @@
 
 .tab-content.info h3 {
 	margin-bottom: 12px;
+}
+
+.nav-pills .nav-item:last-child .nav-link {
+	margin-right: 0px;
 }
 
 @media (min-width: 768px) {
@@ -305,6 +315,10 @@
 	color: #2c2c2c;
 }
 
+.alert-info-contrast {
+	background-color: rgba(249, 99, 50, 0.8) !important;
+}
+
 @media screen and (max-width: 991px) {
 	.sidebar-collapse .navbar-collapse-contrast:before {
 		background: #2CA8FF;
@@ -313,8 +327,4 @@
 		background: -moz-linear-gradient(#f96332 0%, #000 80%);
 		background: linear-gradient(#f96332 0%, #000 80%)
 	}
-}
-
-.nav-pills .nav-item:last-child .nav-link {
-	margin-right: 0px;
 }
